// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Advisor overlay visual snapshots > overlay-ask-advisor renders a stable bounded overlay 1`] = `
{
  "screen": "╭ Advisor · idle · ctx 2.1%/128k ────────────────────────────────────────────╮
│                                                                            │
│ 帮我检查这次 Pull 改动，重点看会不会漏消息。                               │
│                                                                            │
│                                                                            │
│                                                                            │
│ Context · 3 msgs                                                           │
│ user: 给 Pull 增加等待新消息的能力，并补齐游标越界处理。                   │
│ agent: 等待分支已经接入。                                                  │
│ agent: 游标越界时会从当前 transcript 末尾继续。                            │
│                                                                            │
│                                                                            │
│ 我在对照游标推进、等待唤醒和越界恢复的时序。                               │
│                                                                            │
│                                                                            │
│ Pull [0, 12) → 8 msgs · 4.2s                                               │
│ user: 给 Pull 增加等待新消息的能力，并补齐游标越界处理。                   │
│ agent: 我先检查 Pull 的游标推进和等待逻辑。                                │
│ → read extensions/advisor/session.ts ⇒ ok · 640 lines                      │
│ → grep waitForPrimaryTranscript ⇒ ok · 8 matches                           │
│ → edit extensions/advisor/session.ts ⇒ ok · diff applied                   │
│ ... (3 more lines, ctrl+o to expand)                                       │
│                                                                            │
│                                                                            │
│ 游标推进整体合理；还需要覆盖等待期间 Primary 结束但没有新消息的场景。      │
│                                                                            │
│                                                                            │
├────────────────────────────────────────────────────────────────────────────┤
│[7m [27m                                                                           │
╰────────────────────────────────────────────────────────────────────────────╯",
  "styles": {
    "fullWidthBackgroundBlocks": [
      {
        "color": "userMessageBg",
        "lines": [
          "",
          " 帮我检查这次 Pull 改动，重点看会不会漏消息。",
          "",
        ],
      },
      {
        "color": "customMessageBg",
        "lines": [
          "",
          " Context · 3 msgs",
          " user: 给 Pull 增加等待新消息的能力，并补齐游标越界处理。",
          " agent: 等待分支已经接入。",
          " agent: 游标越界时会从当前 transcript 末尾继续。",
          "",
        ],
      },
      {
        "color": "toolSuccessBg",
        "lines": [
          "",
          " Pull [0, 12) → 8 msgs · 4.2s",
          " user: 给 Pull 增加等待新消息的能力，并补齐游标越界处理。",
          " agent: 我先检查 Pull 的游标推进和等待逻辑。",
          " → read extensions/advisor/session.ts ⇒ ok · 640 lines",
          " → grep waitForPrimaryTranscript ⇒ ok · 8 matches",
          " → edit extensions/advisor/session.ts ⇒ ok · diff applied",
          " ... (3 more lines, ctrl+o to expand)",
          "",
        ],
      },
    ],
  },
}
`;

exports[`Advisor overlay visual snapshots > overlay-context-preview renders a stable bounded overlay 1`] = `
{
  "screen": "╭ Advisor · idle · ctx 2.4%/128k ────────────────────────────────────────────╮
│                                                                            │
│ Context · 7 msgs                                                           │
│ user: 帮我检查数据库迁移是否可以安全回滚。                                 │
│ agent: 我先核对旧表结构。                                                  │
│ agent: 接着检查迁移入口。                                                  │
│ agent: 事务边界已经调整。                                                  │
│ agent: 现在补充回滚场景。                                                  │
│ ... (2 more lines, ctrl+o to expand)                                       │
│                                                                            │
│                                                                            │
│                                                                            │
│                                                                            │
├────────────────────────────────────────────────────────────────────────────┤
│[7m [27m                                                                           │
╰────────────────────────────────────────────────────────────────────────────╯",
  "styles": {
    "fullWidthBackgroundBlocks": [
      {
        "color": "customMessageBg",
        "lines": [
          "",
          " Context · 7 msgs",
          " user: 帮我检查数据库迁移是否可以安全回滚。",
          " agent: 我先核对旧表结构。",
          " agent: 接着检查迁移入口。",
          " agent: 事务边界已经调整。",
          " agent: 现在补充回滚场景。",
          " ... (2 more lines, ctrl+o to expand)",
          "",
        ],
      },
    ],
  },
}
`;

exports[`Advisor overlay visual snapshots > overlay-empty renders a stable bounded overlay 1`] = `
{
  "screen": "╭ Advisor · idle · ctx ?/128k ───────────────────╮
│ No Advisor chat yet.                           │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
├────────────────────────────────────────────────┤
│[7m [27m                                               │
╰────────────────────────────────────────────────╯",
  "styles": {
    "fullWidthBackgroundBlocks": [],
  },
}
`;

exports[`Advisor overlay visual snapshots > overlay-expanded-pull renders a stable bounded overlay 1`] = `
{
  "screen": "╭ Advisor · idle · ctx 2.2%/128k ────────────────────────────────────────────╮
│                                                                            │
│ Pull [0, 12) → 8 msgs · 4.2s                                               │
│ <primary-transcript start="0" end="12" total="12" state="idle"             │
│ wait="new_messages" waited-ms="4200">                                      │
│ **user**:                                                                  │
│ 给 Pull 增加等待新消息的能力，并补齐游标越界处理。                         │
│                                                                            │
│ **agent**:                                                                 │
│ 我先检查 Pull 的游标推进和等待逻辑。                                       │
│ // inspect cursor advancement and wake-up ordering before editing          │
│ → read(extensions/advisor/session.ts) ⇒ ok · 640 lines                     │
│ → grep(waitForPrimaryTranscript) ⇒ ok · 8 lines                            │
│ → edit(extensions/advisor/session.ts) ⇒ ok · 1 line                        │
│ \`\`\`diff                                                                    │
│ --- a/extensions/advisor/session.ts                                        │
│ +++ b/extensions/advisor/session.ts                                        │
│ @@ -1 +1 @@                                                                │
│ -const shouldWait = false;                                                 │
│ +const shouldWait = timeoutMs > 0;                                         │
│ \`\`\`                                                                        │
│ 等待分支已经接入，接下来补充越界场景。                                     │
│ → edit(e2e/features/pull-transcript.feature) ⇒ ok · 1 line                 │
│ → bash(just test-e2e) ⇒ ok · 29 scenarios                                  │
│ </primary-transcript>                                                      │
│                                                                            │
│                                                                            │
├────────────────────────────────────────────────────────────────────────────┤
│[7m [27m                                                                           │
╰────────────────────────────────────────────────────────────────────────────╯",
  "styles": {
    "fullWidthBackgroundBlocks": [
      {
        "color": "toolSuccessBg",
        "lines": [
          "",
          " Pull [0, 12) → 8 msgs · 4.2s",
          " <primary-transcript start="0" end="12" total="12" state="idle"",
          " wait="new_messages" waited-ms="4200">",
          " **user**:",
          " 给 Pull 增加等待新消息的能力，并补齐游标越界处理。",
          "",
          " **agent**:",
          " 我先检查 Pull 的游标推进和等待逻辑。",
          " // inspect cursor advancement and wake-up ordering before editing",
          " → read(extensions/advisor/session.ts) ⇒ ok · 640 lines",
          " → grep(waitForPrimaryTranscript) ⇒ ok · 8 lines",
          " → edit(extensions/advisor/session.ts) ⇒ ok · 1 line",
          " \`\`\`diff",
          " --- a/extensions/advisor/session.ts",
          " +++ b/extensions/advisor/session.ts",
          " @@ -1 +1 @@",
          " -const shouldWait = false;",
          " +const shouldWait = timeoutMs > 0;",
          " \`\`\`",
          " 等待分支已经接入，接下来补充越界场景。",
          " → edit(e2e/features/pull-transcript.feature) ⇒ ok · 1 line",
          " → bash(just test-e2e) ⇒ ok · 29 scenarios",
          " </primary-transcript>",
          "",
          "",
        ],
      },
    ],
  },
}
`;

exports[`Advisor overlay visual snapshots > overlay-focused-input renders a stable bounded overlay 1`] = `
{
  "screen": "╭ Advisor · idle · ctx ?/128k ───────────────────╮
│ No Advisor chat yet.                           │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
├────────────────────────────────────────────────┤
│[7m帮[27m我审查这个方案                                │
╰────────────────────────────────────────────────╯",
  "styles": {
    "fullWidthBackgroundBlocks": [],
  },
}
`;

exports[`Advisor overlay visual snapshots > overlay-long-content-small-terminal renders a stable bounded overlay 1`] = `
{
  "screen": "╭ Advisor · idle · ctx 13.3%/128k ─────────╮
│                                          │
│ 再看一下窄窗口里的显示，长标识符换行以后 │
│ 会不会把边框撑开，或者挡住下面的输入框？ │
│                                          │
│                                          │
│                                          │
│ Context · 2 msgs                         │
│ user: 请确认                             │
│ primaryTranscriptCursorByAdvisorSessionA │
│ ndWorkspace 在窄窗口中能正常换行。       │
│ agent: 我保留这个完整标识符，用它验证    │
│ Context 在窄宽度下的折行，同时确认截断提 │
│ ... (1 more lines, ctrl+o to expand)     │
│                                          │
│                                          │
│ Context 会在面板内换行，右侧边框和输入区 │
│ 域都保持完整。                           │
├──────────────────────────────────────────┤
│[7m [27m                                         │
╰──────────────────────────────────────────╯",
  "styles": {
    "fullWidthBackgroundBlocks": [
      {
        "color": "userMessageBg",
        "lines": [
          "",
          " 再看一下窄窗口里的显示，长标识符换行以后",
          " 会不会把边框撑开，或者挡住下面的输入框？",
          "",
        ],
      },
      {
        "color": "customMessageBg",
        "lines": [
          "",
          " Context · 2 msgs",
          " user: 请确认",
          " primaryTranscriptCursorByAdvisorSessionA",
          " ndWorkspace 在窄窗口中能正常换行。",
          " agent: 我保留这个完整标识符，用它验证",
          " Context 在窄宽度下的折行，同时确认截断提",
          " ... (1 more lines, ctrl+o to expand)",
          "",
        ],
      },
    ],
  },
}
`;

exports[`Advisor overlay visual snapshots > overlay-real-plan-review-preview renders a stable bounded overlay 1`] = `
{
  "screen": "╭ Advisor · idle · ctx 10.7%/372k ───────────────────────────────────────────╮
│                                                                            │
│ 帮我审查一下这个计划，看看有没有遗漏。                                     │
│                                                                            │
│                                                                            │
│                                                                            │
│ Context · 4 msgs                                                           │
│ user: 我想给 Advisor 增加一个导出当前对话为 Markdown 的命令。先帮我做个实  │
│ 现计划，不用改代码。                                                       │
│ agent: Let me first了解一下项目结构和 Advisor 是什么。                     │
│ agent: Now let me看看 pi 扩展文档，了解 ExtensionAPI 的接口，特别是在文件  │
│ 写入等方面有什么可用能力。                                                 │
│ ... (223 more lines, ctrl+o to expand)                                     │
│                                                                            │
│                                                                            │
│                                                                            │
│ Pull [36, 37) → 1 msg · 0.0s                                               │
│ agent: 好的，我已经全面了解了项目结构和 Advisor 的架构。以下是我的实现计划 │
│ ：                                                                         │
│                                                                            │
│ ---                                                                        │
│                                                                            │
│ ... (218 more lines, ctrl+o to expand)                                     │
│                                                                            │
│                                                                            │
├────────────────────────────────────────────────────────────────────────────┤
│[7m [27m                                                                           │
╰────────────────────────────────────────────────────────────────────────────╯",
  "styles": {
    "fullWidthBackgroundBlocks": [
      {
        "color": "userMessageBg",
        "lines": [
          "",
          " 帮我审查一下这个计划，看看有没有遗漏。",
          "",
        ],
      },
      {
        "color": "customMessageBg",
        "lines": [
          "",
          " Context · 4 msgs",
          " user: 我想给 Advisor 增加一个导出当前对话为 Markdown 的命令。先帮我做个实",
          " 现计划，不用改代码。",
          " agent: Let me first了解一下项目结构和 Advisor 是什么。",
          " agent: Now let me看看 pi 扩展文档，了解 ExtensionAPI 的接口，特别是在文件",
          " 写入等方面有什么可用能力。",
          " ... (223 more lines, ctrl+o to expand)",
          "",
        ],
      },
      {
        "color": "toolSuccessBg",
        "lines": [
          "",
          " Pull [36, 37) → 1 msg · 0.0s",
          " agent: 好的，我已经全面了解了项目结构和 Advisor 的架构。以下是我的实现计划",
          " ：",
          "",
          " ---",
          "",
          " ... (218 more lines, ctrl+o to expand)",
          "",
        ],
      },
    ],
  },
}
`;

exports[`Advisor overlay visual snapshots > overlay-repeated-ask renders a stable bounded overlay 1`] = `
{
  "screen": "╭ Advisor · idle · ctx 2.5%/128k ────────────────╮
│                                                │
│ 同一个结论能换个角度解释吗？                   │
│                                                │
│                                                │
│                                                │
│ Context · 0 msgs                               │
│                                                │
│                                                │
│ 可以。关键是 Advisor 会复用已有上下文，不会重  │
│ 复注入相同的 Primary 内容。                    │
│                                                │
│                                                │
├────────────────────────────────────────────────┤
│[7m [27m                                               │
╰────────────────────────────────────────────────╯",
  "styles": {
    "fullWidthBackgroundBlocks": [
      {
        "color": "userMessageBg",
        "lines": [
          "",
          " 同一个结论能换个角度解释吗？",
          "",
        ],
      },
      {
        "color": "customMessageBg",
        "lines": [
          "",
          " Context · 0 msgs",
          "",
        ],
      },
    ],
  },
}
`;

exports[`Advisor overlay visual snapshots > overlay-reset renders a stable bounded overlay 1`] = `
{
  "screen": "╭ Advisor · reset · ctx 0.0%/128k ───────────────╮
│ No Advisor chat yet.                           │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
├────────────────────────────────────────────────┤
│[7m [27m                                               │
╰────────────────────────────────────────────────╯",
  "styles": {
    "fullWidthBackgroundBlocks": [],
  },
}
`;

exports[`Advisor overlay visual snapshots > overlay-tiny-terminal renders a stable bounded overlay 1`] = `
{
  "screen": "╭ Advisor · idle · ctx[0m─╮
│ No Advisor chat yet. │
│                      │
│                      │
├──────────────────────┤
│[7m [27m                     │
╰──────────────────────╯",
  "styles": {
    "fullWidthBackgroundBlocks": [],
  },
}
`;

exports[`Advisor overlay visual snapshots > overlay-tool-and-advice-blocks renders a stable bounded overlay 1`] = `
{
  "screen": "╭ Advisor · idle · ctx 3.4%/128k ──────────────────────────────────────────────────────────────╮
│                                                                                              │
│ 帮我审查 Pull 的错误处理和 Advice 送达顺序。                                                 │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│ grep {"pattern":"resolvePullCursor"} ⇒ pending                                               │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│ read {"path":"extensions/advisor/session.ts"} ⇒ ok · 2 lines                                 │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│ write {"path":"extensions/advisor/session.ts"} ⇒ error · 2 lines — EACCES: permission denied │
│ 无法写入 session.ts                                                                          │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│ Hint: 先校验游标，再进入等待分支。                                                           │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│ Concern: 写入失败时不要继续发送完成通知。                                                    │
│                                                                                              │
│                                                                                              │
│ 主要风险已经标注，建议补完错误路径后再提交。                                                 │
│                                                                                              │
│                                                                                              │
│                                                                                              │
│                                                                                              │
├──────────────────────────────────────────────────────────────────────────────────────────────┤
│[7m [27m                                                                                             │
╰──────────────────────────────────────────────────────────────────────────────────────────────╯",
  "styles": {
    "fullWidthBackgroundBlocks": [
      {
        "color": "userMessageBg",
        "lines": [
          "",
          " 帮我审查 Pull 的错误处理和 Advice 送达顺序。",
          "",
        ],
      },
      {
        "color": "toolPendingBg",
        "lines": [
          "",
          " grep {"pattern":"resolvePullCursor"} ⇒ pending",
          "",
        ],
      },
      {
        "color": "toolSuccessBg",
        "lines": [
          "",
          " read {"path":"extensions/advisor/session.ts"} ⇒ ok · 2 lines",
          "",
        ],
      },
      {
        "color": "toolErrorBg",
        "lines": [
          "",
          " write {"path":"extensions/advisor/session.ts"} ⇒ error · 2 lines — EACCES: permission denied",
          " 无法写入 session.ts",
          "",
        ],
      },
      {
        "color": "toolErrorBg",
        "lines": [
          "",
          " Hint: 先校验游标，再进入等待分支。",
          "",
        ],
      },
      {
        "color": "toolErrorBg",
        "lines": [
          "",
          " Concern: 写入失败时不要继续发送完成通知。",
          "",
        ],
      },
    ],
  },
}
`;

exports[`Advisor overlay visual snapshots > overlay-unbound-pull-expansion renders a stable bounded overlay 1`] = `
{
  "screen": "╭ Advisor · idle · ctx 2.2%/128k ────────────────────────────────────────────╮
│                                                                            │
│ Pull [0, 12) → 8 msgs · 4.2s                                               │
│ user: 给 Pull 增加等待新消息的能力，并补齐游标越界处理。                   │
│ agent: 我先检查 Pull 的游标推进和等待逻辑。                                │
│ → read extensions/advisor/session.ts ⇒ ok · 640 lines                      │
│ → grep waitForPrimaryTranscript ⇒ ok · 8 matches                           │
│ → edit extensions/advisor/session.ts ⇒ ok · diff applied                   │
│ ... (3 more lines)                                                         │
│                                                                            │
│                                                                            │
│                                                                            │
│                                                                            │
├────────────────────────────────────────────────────────────────────────────┤
│[7m [27m                                                                           │
╰────────────────────────────────────────────────────────────────────────────╯",
  "styles": {
    "fullWidthBackgroundBlocks": [
      {
        "color": "toolSuccessBg",
        "lines": [
          "",
          " Pull [0, 12) → 8 msgs · 4.2s",
          " user: 给 Pull 增加等待新消息的能力，并补齐游标越界处理。",
          " agent: 我先检查 Pull 的游标推进和等待逻辑。",
          " → read extensions/advisor/session.ts ⇒ ok · 640 lines",
          " → grep waitForPrimaryTranscript ⇒ ok · 8 matches",
          " → edit extensions/advisor/session.ts ⇒ ok · diff applied",
          " ... (3 more lines)",
          "",
        ],
      },
    ],
  },
}
`;
